--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script src="./js/app.js" defer></script>
     <script src="./js/loader.js" defer></script>
-    <link rel="shortcut icon" type="image/x-icon" href="../images/icone.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/nbapp-logo.png">
 </head>
 <body>
         <div class="loader-container">
@@ -21,7 +21,7 @@
             <p>Chargement des données...</p>
         </div>
         <div class="logoHead">
-            <img class="nba-logo" src="./images/nbapp-logo.png">
+            <img class="nba-logo" src="./images/nbapp-logo.png" alt="app logo" />
             <p class ="matchsTitle">Matchs</p>
             <p class ="standingsTitle off">Classements</p>
         </div>
